@@ -1,0 +1,1 @@
+Discard extra empty YAML documents in debian/upstream/metadata.
