@@ -9,6 +9,8 @@ lintian-brush (0.77) UNRELEASED; urgency=medium
 
   [ Jelmer Vernooĳ ]
   * Add --scan option to guess-upstream-metadata.
+  * Convert debian/upstream/metadata with multiple documents to a single
+    document.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 22 Aug 2020 17:33:30 +0000
 
